--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
           <td>11時半〜</td>
         </tr>
       </table>
+      <style>
+        table {
+          border: 2px solid;
+        }
+      </style>
     </head>
   </body>
 </html>
