--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         table {
           border: 2px solid;
         }
+        th,td {
+          border: 1px solid;
+        }
       </style>
     </head>
   </body>
