--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         </tr>
       </table>
       <style>
+        table {
+          border: 2px solid;
+        }
         th,td {
           border: 1px solid;
         }
